# poc-simple-rust-oauth-server

./: .env  Cargo.toml  docker-compose.yaml  justfile
migrations/: 20240713214633_setup_users_table.sql  20240714074702_setup_auth_code_flow_state.sql
src/: app_state.rs  endpoints.rs  lib.rs  main.rs  primitives.rs  routes.rs
src/endpoints/: authorize.rs  token.rs
src/oauth/: clients.rs  mod.rs
src/repositories/: auth_code_flows.rs  mod.rs  users.rs
src/routes/: authorize.rs  mod.rs  token.rs  well_known.rs
src/routes/auth/: mod.rs
src/routes/auth/authorize/: errors.rs  mod.rs  models.rs
src/routes/auth/token/: errors.rs  mod.rs  models.rs
src/routes/authorize/: errors.rs  mod.rs  models.rs
src/routes/token/: errors.rs  mod.rs  models.rs
src/services/: external_identity_provider.rs  mod.rs
test-env/: keycloak_config.tf  provider.tf
tests/: auth.rs
tests/common/: mod.rs
