[package]
name = "simple-oauth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
openidconnect = "3.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
anyhow = "1.0.86"
ed25519-dalek = {version= "2.1.1", features = ["rand_core"]}
rand = "0.8.5"
base64 = "0.22.1"
subtle = "2.5.0"
chrono = "0.4.38"